--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artworks</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="x-icon" href=logo.png">
+    <link rel="shortcut icon" type="x-icon" href="logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=DynaPuff&family=Press+Start+2P&display=swap" rel="stylesheet">
 
 </head>
